--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -76,7 +76,9 @@
     %footer
       .container
         %p
-          Made by the
+          Made with
+          %i.icon-heart.icon-large
+          by the
           = link_to "OpenAustralia Foundation", "https://www.openaustraliafoundation.org.au"
           for you
         %ul.list-unstyled
