--- a/app/views/scrapers/_danger.html.haml
+++ b/app/views/scrapers/_danger.html.haml
@@ -4,7 +4,7 @@
       %h3.panel-title Here be dragons!
     .panel-body
       %p
-        = button_to "Clear database", clear_scraper_path(@scraper), {class: "btn btn-danger", data: {confirm: "All your data will be gone!"}}
+        = button_to "Clear database", scraper_clear_path(@scraper), {class: "btn btn-danger", data: {confirm: "All your data will be gone!"}}
       %p
         = button_to "Delete scraper", @scraper, {method: :delete, class: "btn btn-danger", data: {confirm: "Delete #{@scraper.full_name}?"}}
       %p These can't be undone
