--- a/app/views/scrapers/_show_normal.html.haml
+++ b/app/views/scrapers/_show_normal.html.haml
@@ -3,7 +3,7 @@
     %h1.full_name
       = full_name_with_links(scraper)
       .large-icon-box.pull-right
-        - if scraper.can_write?(current_user)
+        - if can? :settings, scraper
           = link_to scraper_settings_path(scraper) do
             = render partial: "scrapers/auto_clock", locals: {scraper: scraper}
         - else
@@ -44,7 +44,7 @@
     = render partial: "scrapers/statistics", locals: {scraper: scraper}
     = render partial: "scrapers/history", locals: {scraper: scraper}
   .col-md-2
-    - if signed_in? && scraper.can_write?(current_user)
+    - if can? :settings, scraper
       #scraper_settings
         = button_link_to scraper_settings_path(scraper) do
           %i.icon-wrench
