--- a/app/views/scrapers/watchers.html.haml
+++ b/app/views/scrapers/watchers.html.haml
@@ -5,7 +5,7 @@
         = full_name_with_links(@scraper)
         .large-icon-box.pull-right
           - if can? :settings, @scraper
-            = link_to scraper_settings_path(@scraper) do
+            = link_to settings_scraper_path(@scraper) do
               = render partial: "scrapers/auto_clock", locals: {scraper: @scraper}
           - else
             = render partial: "scrapers/auto_clock", locals: {scraper: @scraper}
