--- a/app/views/owners/settings.html.haml
+++ b/app/views/owners/settings.html.haml
@@ -24,7 +24,7 @@
       Take extra care if resetting the api key as it will effect everyone else who is part of the organization.
 
   - if Scraper.can_write?(current_user, @owner)
-    = button_to "Reset key", owner_reset_key_path(@owner), class: "btn btn-danger"
+    = button_to "Reset key", reset_key_owner_path(@owner), class: "btn btn-danger"
 
   - if current_user.admin?
     %h2 Feature settings (admin only)
