--- a/app/views/owners/show.html.haml
+++ b/app/views/owners/show.html.haml
@@ -37,7 +37,7 @@
                   = link_to owner_image(user, 30), user
         - if Scraper.can_write?(current_user, @owner) || (current_user && current_user.admin?)
           %div
-            = button_link_to "Settings", owner_settings_path(@owner)
+            = button_link_to "Settings", settings_owner_path(@owner)
       .col-md-2.owner-box
         - if signed_in?
           .pull-right= render partial: "watch_button", locals: {owner: @owner}
