Fix up another route the same way

--- a/app/views/alert_mailer/alert_email.html.haml
+++ b/app/views/alert_mailer/alert_email.html.haml
@@ -233,6 +233,6 @@
                 %td(align="center")
                   %p
                     Annoyed by these emails? Then
-                    = link_to "change what you're watching", user_watching_url(@user, @analytics_params)
+                    = link_to "change what you're watching", watching_user_url(@user, @analytics_params)
                   %p= link_to "Morph.io", root_url(@analytics_params)
         %td
