--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -53,6 +53,7 @@
                   Admin
                   %b(class="caret")
                 %ul(class="dropdown-menu")
+                  %li= link_to "Dashboard", admin_dashboard_path
                   %li= link_to "Owner Metrics", admin_owners_path
                   %li= link_to "Background queue", "/admin/jobs", data: {"no-turbolink" => true}
 
