--- a/app/views/owners/_watch_button.html.haml
+++ b/app/views/owners/_watch_button.html.haml
@@ -1,8 +1,8 @@
 - if current_user.watching?(owner)
-  = button_to watch_owner_path(owner), class: "btn btn-default has-tooltip", data: {placement: "bottom", title: "Stop receiving alerts for #{owner.nickname}'s scrapers"} do
+  = button_to watch_owner_path(owner), class: "btn btn-default has-tooltip" + (" disabled" unless can? :watch, owner), data: {placement: "bottom", title: "Stop receiving alerts for #{owner.nickname}'s scrapers"} do
     %i.icon-eye-close
     Unwatch
 - else
-  = button_to watch_owner_path(owner), class: "btn btn-default has-tooltip", data: {placement: "bottom", title: "Receive alerts when any of #{owner.nickname}'s scrapers errors"} do
+  = button_to watch_owner_path(owner), class: "btn btn-default has-tooltip" + (" disabled" unless can? :watch, owner), data: {placement: "bottom", title: "Receive alerts when any of #{owner.nickname}'s scrapers errors"} do
     %i.icon-eye-open
     Watch
