--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -35,7 +35,7 @@
         .collapse.navbar-collapse#bs-example-navbar-collapse-1
           %ul.nav.navbar-nav
             -# TODO set class to "active" when this is the current page
-            %li{class: "dropdown " + ("disabled" unless can? :new, Scraper)}
+            %li.dropdown{class: ("disabled" unless can? :new, Scraper)}
               = link_to "#", class: "dropdown-toggle", data: {toggle: ("dropdown" if can? :new, Scraper)} do
                 Add Scraper
                 %b(class="caret")
