--- a/app/views/owners/settings.html.haml
+++ b/app/views/owners/settings.html.haml
@@ -34,6 +34,6 @@
 
     = semantic_form_for @owner do |f|
       = f.inputs do
-        = f.input :buildpacks, as: :boolean, hint: "Add experimental support for Heroku buildpacks. Allows the installation of custom libraries, etc.. Only for Ruby and Python at the moment"
+        = f.input :buildpacks, as: :boolean, hint: "Add experimental support for Heroku buildpacks. Allows the installation of custom libraries, etc.."
       = f.actions do
         = f.action :submit, label: "Update feature settings"
