Add an improve this page button. Fixes #411

--- a/app/views/documentation/index.html.haml
+++ b/app/views/documentation/index.html.haml
@@ -1,4 +1,8 @@
 - content_for :title, "Documentation"
 
-:markdown
-  #{render "index.md"}
+.row
+  .col-sm-10
+    :markdown
+      #{render "index.md"}
+  .col-sm-2
+    = link_to "Improve this page", "https://github.com/openaustralia/morph/blob/master/app/views/documentation/_index.md", class: "btn btn-default"
