--- a/app/views/layouts/documentation.html.haml
+++ b/app/views/layouts/documentation.html.haml
@@ -7,6 +7,7 @@
         %ul.nav.nav-pills.nav-stacked#sidebar
           = bs_nav_link "Main documentation", documentation_index_path
           = bs_nav_link "What's New", what_is_new_documentation_index_path
+          = bs_nav_link "Buildpacks", buildpacks_documentation_index_path
           = bs_nav_link "How to use the API", api_documentation_index_path
       .col-md-10
         = yield
