Prettify use of icon in banner

--- a/app/views/documentation/buildpacks.html.haml
+++ b/app/views/documentation/buildpacks.html.haml
@@ -2,9 +2,8 @@
   # Buildpacks
 
   <div class="alert alert-info">
-    <i class="icon-beaker icon-large"></i>
-    <p>N.B. Buildpacks are currently experimental and not available to everyone. If you would like access
-    to Buildpacks and agree to give us feedback please contact us and we'll enable the feature for you.</p>
+    <i class="icon-beaker icon-3x pull-left"></i>N.B. Buildpacks are currently experimental and not available to everyone. If you would like access
+    to Buildpacks and agree to give us feedback please contact us and we'll enable the feature for you.
   </div>
 
   Buildpacks are a new feature that allows you to pick and choose which libraries you would like
