--- a/app/views/documentation/buildpacks.html.haml
+++ b/app/views/documentation/buildpacks.html.haml
@@ -19,8 +19,24 @@
 
   ## Ruby
 
+  References
+
+  * [Heroku Ruby Support](https://devcenter.heroku.com/articles/ruby-support)
+
   ## PHP
+
+  References
+
+  * [Heroku PHP Support](https://devcenter.heroku.com/articles/php-support)
 
   ## Perl
 
+  References
+
+  * [Third-party Heroku Perl Buildpack](https://github.com/miyagawa/heroku-buildpack-perl)
+
   ## Python
+
+  References
+
+  * [Heroku Python Support](https://devcenter.heroku.com/articles/python-support)
