bundle update twitter-bootstrap-rails and upgrades font awesome

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -113,7 +113,7 @@ span.internalout {
   box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
 
-a i.icon-time {
+a i.fa-clock-o {
   text-decoration: none;
 }
 
@@ -169,6 +169,6 @@ form.scraper {
   }
 }
 
-a i[class^="icon-"] {
+a i.fa {
   text-decoration: none;
 }
