--- a/app/views/owners/show.html.haml
+++ b/app/views/owners/show.html.haml
@@ -21,7 +21,7 @@
                 %li= link_to @owner.blog, @owner.blog
             %p
               = link_to @owner.github_url, target: "_blank" do
-                %i.icon-github-sign.icon-large
+                %i.fa.fa-github-square.fa-lg
                 = @owner.nickname
                 on GitHub
           .col-md-6
