--- a/app/views/scrapers/_variable_fields.html.haml
+++ b/app/views/scrapers/_variable_fields.html.haml
@@ -7,4 +7,4 @@
         = f.input :value
       .col-sm-1
         = link_to_remove_association f do
-          %i.icon-remove-sign.icon-2x
+          %i.fa.fa-times-circle.fa-2x
