--- a/app/views/scrapers/_github_form_loader.html.haml
+++ b/app/views/scrapers/_github_form_loader.html.haml
@@ -4,7 +4,7 @@
 
 %div{id: "owner_#{owner.nickname}_content"}
   %p
-    %i.icon-github.icon-2x.icon-spin
+    %i.fa.fa-github.fa-2x.fa-spin
     Hang on. Getting your repositories from GitHub&hellip;
 :javascript
   $(document).ready(function(){
