--- a/app/views/scrapers/_settings.html.haml
+++ b/app/views/scrapers/_settings.html.haml
@@ -19,7 +19,7 @@
     .links
       - if can? :update, @scraper
         = link_to_add_association f, :variables do
-          %i.icon-plus-sign.icon-2x
+          %i.fa.fa-plus-circle.fa-2x
           Add variable
   - if can? :update, @scraper
     = f.actions do
