Change icon for settings to a set of sliders

--- a/app/views/scrapers/_show_normal.html.haml
+++ b/app/views/scrapers/_show_normal.html.haml
@@ -52,7 +52,7 @@
     - if can? :settings, scraper
       #scraper_settings
         = button_link_to settings_scraper_path(scraper) do
-          %i.fa.fa-wrench
+          %i.fa.fa-sliders
           Settings
 
     #scraper_code
