--- a/app/views/documentation/buildpacks.html.haml
+++ b/app/views/documentation/buildpacks.html.haml
@@ -1,7 +1,7 @@
 %h1 Buildpacks
 
 .alert.alert-info
-  %i.icon-beaker.icon-3x.pull-left
+  %i.fa.fa-flask.fa-3x.pull-left
   N.B. Buildpacks are currently experimental and not available to everyone. If you would like access
   to Buildpacks and agree to give us feedback please contact us and we'll enable the feature for you.
 
