Extracted partials for each language

--- a/app/views/documentation/buildpacks.html.haml
+++ b/app/views/documentation/buildpacks.html.haml
@@ -7,3 +7,19 @@
 
 :markdown
   #{render "buildpacks.md"}
+
+  ## Ruby
+
+  #{render "buildpacks_ruby.md"}
+
+  ## PHP
+
+  #{render "buildpacks_php.md"}
+
+  ## Perl
+
+  #{render "buildpacks_perl.md"}
+
+  ## Python
+
+  #{render "buildpacks_python.md"}
