Fix interpolation by moving partial back to haml

--- a/app/views/documentation/index.html.haml
+++ b/app/views/documentation/index.html.haml
@@ -17,8 +17,7 @@
       #{render "documentation/faq/languages.md"}
 
     %h3.section#format In what format do I write out the data I've scraped?
-    :markdown
-      #{render "documentation/faq/format.md"}
+    = render "documentation/faq/format"
 
     %h3.section#libraries What version of the language and what libraries do I have access to?
     :markdown
