Convert template to haml

--- a/app/views/documentation/index.html.haml
+++ b/app/views/documentation/index.html.haml
@@ -13,8 +13,7 @@
       %li= link_to "Your responsibility", "#responsibility"
 
     %h3.section#languages What languages can scrapers be written in?
-    :markdown
-      #{render "documentation/faq/languages.md"}
+    = render "documentation/faq/languages"
 
     %h3.section#format In what format do I write out the data I've scraped?
     = render "documentation/faq/format"
